# nmrpc

./: Cargo.toml  README.md
src/: main.rs  networkcfg.rs  nmmgr.rs
