[package]
name = "nmrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glib]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.glib-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gobject-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies]
nm = { git = "https://github.com/balena-io-modules/libnm-rs" }
eyre = "0.6.8"
libc = "0.2.135"
futures-executor = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
